<resources>
    <string name="app_name">Pharm</string>
    <string name="login">Login</string>
    <string name="account">Create an account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="reset">Reset Password</string>
    <string name="link">Password Reset Link will be sent to this Email Address</string>
    <string name="have_account">Already Registered Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="update">Update Profile</string>
    <string name="pharm">Create Pharmacy</string>
    <string name="pharmacy">Pharmacy Name</string>
    <string name="create">Create</string>
    <string name="pharm_address">Pharmacy Address</string>
    <string name="add_pharmacy">Add Pharmacy</string>
    <string name="view">View Pharmacies</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="profile_photo">Upload Profile Picture</string>
    <string name="up">Update</string>
    <string name="del">Delete</string>
    <string name="update_pharm">Update Pharmacy</string>
    <string name="edit">Update Pharmacy</string>
    <string name="drug">Drug Name</string>
    <string name="drug_image">Drug Image</string>
    <string name="drug_description">Drug Description</string>
    <string name="child">Child Prescription</string>
    <string name="old">Old Prescription</string>
    <string name="price">Price</string>
    <string name="add_drug">Add Drug</string>
    <string name="upload">Upload</string>
    <string name="Uploaded">Your Uploaded Drugs</string>
    <string name="update_drug">Update Your Drugs Here</string>
    <string name="edit_drug">Edit Drug</string>
    <string name="pharmacies">Available Pharmacies</string>
    <string name="products">See Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>