<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminProfile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="User Profile"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/login_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/phone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/age"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/address"
            android:textSize="18sp" />

        <Button
            android:id="@+id/update"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/blue2"
            android:text="@string/update" />

    </LinearLayout>

</LinearLayout>