<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical">

     <ImageView
         android:layout_width="200dp"
         android:layout_height="130dp"
         android:src="@drawable/main_logo"
         />


     <com.google.android.material.textfield.TextInputLayout

         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:hint="@string/email"
         app:startIconDrawable="@drawable/email">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress" />

     </com.google.android.material.textfield.TextInputLayout>


     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:text="@string/link"
         android:textSize="18sp" />

     <Button
         android:id="@+id/reset_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/blue2"
         android:layout_marginEnd="32dp"
         android:text="@string/reset" />

 </LinearLayout>

</ScrollView>